migrate to npm & removed canvas dep

--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   "module": "dist/signature_pad.js",
   "types": "dist/types/signature_pad.d.ts",
   "scripts": {
-    "build": "yarn run lint && yarn run clean && rollup --config && yarn run emit-types && yarn run update-docs",
-    "clean": "yarn run del dist",
-    "emit-types": "yarn run del dist/types && yarn run tsc src/signature_pad.ts --lib DOM,ES2015 --declaration --declarationDir dist/types --emitDeclarationOnly",
+    "build": "npm run lint && npm run clean && rollup --config && npm run emit-types && npm run update-docs",
+    "clean": "del dist",
+    "emit-types": "del dist/types && tsc src/signature_pad.ts --lib DOM,ES2015 --declaration --declarationDir dist/types --emitDeclarationOnly",
     "format": "prettier --write {src,tests}/**/*.{js,ts}",
     "lint": "eslint {src,tests}/**/*.ts",
-    "prepublishOnly": "yarn run build",
+    "prepublishOnly": "npm run build",
     "serve": "serve -l 9000 docs",
-    "start": "yarn run build && yarn run serve",
+    "start": "npm run build && npm run serve",
     "test": "jest --coverage",
-    "update-docs": "yarn run cp-cli dist/signature_pad.umd.js docs/js/signature_pad.umd.js",
+    "update-docs": "cp-cli dist/signature_pad.umd.js docs/js/signature_pad.umd.js",
     "prepare": "husky install"
   },
   "repository": {
@@ -41,7 +41,6 @@
     "@types/node": "^16.11.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "canvas": "^2.8.0",
     "cp-cli": "^2.0.0",
     "del": "^6.0.0",
     "del-cli": "^4.0.1",
