--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "url": "https://github.com/szimek"
   },
   "license": "MIT",
-  "source": "src/signature_pad.ts",
-  "main": "dist/signature_pad.umd.js",
-  "module": "dist/signature_pad.js",
+  "source": "./src/signature_pad.ts",
+  "main": "./dist/signature_pad.umd.js",
+  "module": "./dist/signature_pad.js",
+  "type": "module",
+  "exports": {
+    "import": "./dist/signature_pad.js",
+    "require": "./dist/signature_pad.umd.js"
+  },
   "types": "dist/types/signature_pad.d.ts",
   "scripts": {
     "build": "npm run lint && npm run clean && rollup --config && npm run emit-types && npm run update-docs",
