--- a/package.json
+++ b/package.json
@@ -12,11 +12,6 @@
   "source": "./src/signature_pad.ts",
   "main": "./dist/signature_pad.umd.js",
   "module": "./dist/signature_pad.js",
-  "type": "module",
-  "exports": {
-    "import": "./dist/signature_pad.js",
-    "require": "./dist/signature_pad.umd.js"
-  },
   "types": "dist/types/signature_pad.d.ts",
   "scripts": {
     "build": "npm run lint && npm run clean && rollup --config && npm run emit-types && npm run update-docs",
@@ -24,12 +19,12 @@
     "emit-types": "del dist/types && tsc src/signature_pad.ts --lib DOM,ES2015 --declaration --declarationDir dist/types --emitDeclarationOnly",
     "format": "prettier --write {src,tests}/**/*.{js,ts}",
     "lint": "eslint {src,tests}/**/*.ts",
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "serve": "serve -l 9000 docs",
     "start": "npm run build && npm run serve",
     "test": "jest --coverage",
     "update-docs": "cp-cli dist/signature_pad.umd.js docs/js/signature_pad.umd.js",
-    "prepare": "husky install"
+    "prepare": "husky install && npm run build"
   },
   "repository": {
     "type": "git",
